[fix]: Add responsiveness on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -267,29 +267,20 @@ margin: auto;
 /*COMMUNITY CARE */
 
 .comm-care {
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    height: 342px;
-   margin-top:5%;
-   margin-bottom: 0%;
+   width: 100%;
+   display: flex;
+   justify-content: space-between;
+   align-items: center;
+   margin-top: 5%;
+   margin-bottom: 5%;
+   color: #670B78;
+   background-color: #F7F7F7;
+
+   font-size: 2rem;
+   padding: .5rem;
 }
 
-.comm-care-main {
-    width: 100%;
-    height: 342px;
-    color: #670B78;
-    background-color: #F7F7F7;
-
-    display: flex;
-    justify-content: space-between;
-
-    font-size: 2rem;
-    padding: .5rem;
-}
-
-.comm-care-main > div {
+.comm-care > div {
     width: 50%;
 }
 
@@ -352,12 +343,16 @@ margin: auto;
 /* Style for screens smaller than 480px */
 @media only screen and (max-width: 480px) {
    /* CSS styles go here */
+
+   .comm-care-section-1 > h3 {
+      font-size: 10px;
+   }
  }
  
  /* Style for screens between 480px and 768px */
  @media only screen and (max-width: 600px) {
    /* CSS styles go here */
-   .comm-care-main {
+   .comm-care {
       flex-direction: column;
       justify-content: center;
       align-items: center;
@@ -389,17 +384,14 @@ margin: auto;
 
 /* MAKE VALUE CARD */
 .make-value-card {
-   height: 350px;
    width: 100%;
-   display: flex;
-   justify-content: center;
-   align-items: center;
    background-color: #F7F7F7;
    margin-bottom: 15%;
+   display: grid;
+   place-items: center;
 }
 
 .make-value-content {
-   height: 100%;
    background-color: #670B78;
    width: 90%;
    color: #fff;
@@ -410,6 +402,7 @@ margin: auto;
    border-radius: 24px;
 
    position: relative;
+   padding: 6px 10px;
    /* margin-bottom: 10px; */
 }
 
@@ -417,15 +410,12 @@ margin: auto;
    font-family: 'Exo 2';
    font-size: 30px;
    font-weight: 700;
-   line-height: 20px;
    letter-spacing: 0em;
    text-align: center;
 
 }
 
 .make-value-btn {
-   height: 48px;
-   width: 255px;
    border: none;
    border-radius: 100px;
    padding: 12px 40px 12px 40px;
@@ -433,7 +423,6 @@ margin: auto;
    font-family: 'Ubuntu';
    font-size: 16px;
    font-weight: 400;
-   line-height: 24px;
    letter-spacing: 0em;
    text-align: left;
 
@@ -467,7 +456,6 @@ margin: auto;
    left: 901.181396484375px;
    top: 281.73388671875px;
    border-radius: 0px;
-   /* background: #96F550CC; */
    position: absolute;
    left: 67.86%;
    right: 0.98%;
@@ -492,11 +480,12 @@ margin: auto;
 /* Style for screens smaller than 480px */
 @media only screen and (max-width: 480px) {
    .make-value-content p {
-      font-size: 10px;
+      font-size: 5px;
    }
 
    .make-value-btn {
-      font-size: 8px;
+      font-size: 5px;
+      padding: 3px 10px 3px 10px;
    }
  }
  
